--- a/projects/codingfromlife-template/index.html
+++ b/projects/codingfromlife-template/index.html
@@ -3,19 +3,32 @@
 
 <head>
 
-	<!-- please write your name in the title tag -->
-	<title>Coding from Life</title>
+    <!-- please write your name in the title tag -->
+    <title>Coding from Life</title>
 
-	<meta charset="utf-8" />
-	<link rel="stylesheet" href="assets/main.css" type="text/css" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 
 <body>
+    
+    <a href="../../current-projects.html">Go Back</a>
+    
     <div class="canvas">
-    	<div id="square"></div>
-    	<div id="circle"></div>
-    	<div id="triangle"></div>
+        <div id="stem"></div>
+        <div id="stemleaf"></div>
+        <div id="square"></div>
+        <div id=fold></div>
+        <div id="circle"></div>
+        <div id="circle2"></div>
+        <div id=book>
+            <div id="triangle"></div>
+            <div id="triangle2"></div>
+            <div id="triangle3"></div>
+        </div>
+        <div id="bottle"></div>
+        <div id="lid"></div>
+        <div id="leaves"></div>        
+        <div id="leaf"></div>        
     </div>
-</body>
-
-</html>
+</body></html>
