--- a/projects/maxims/maxim_four.html
+++ b/projects/maxims/maxim_four.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -9,9 +10,13 @@
 </head>
 
 <body>
-    <p class="row"> 
-    <span class="flow"><span class="rich">Rich 50</span> is middle-class 38.</span>
-    </p>
-</body>
+    
+    <a href="maxim_three.html">Previous</a>
 
-</html>
+    <div>
+    <p class="row">
+        <span class="money">Money</span> can't buy happiness, it <span id="space"></span> <span class="float">is</span> happiness.
+    </p>
+    </div>
+    <a href="maxim_five.html">Next</a>
+</body></html>
