--- a/projects/maxims/maxim_seven.html
+++ b/projects/maxims/maxim_seven.html
@@ -4,13 +4,27 @@
     <title>Maxim Seven</title>
     <meta charset="UTF-8">
     <meta name="viewport" contesnt="width=device-width, initial-scale=1">
+
+
+
     <link rel="stylesheet" type="text/css" href="assets/css/maxim_style_seven.css">
 </head>
 
 <body>
-    <p class="row"> 
-    Jack Donaghy is gonna kill me and then he's gonna kill you and then he's gonna fold us up in a pizza and eat us!
-    </p>
-</body>
 
-</html>
+    <a href="maxim_six.html">Previous</a>
+
+    <div>
+        <img src="assets/imgs/speaker-03.svg" height=700em class="over">
+        <img src="assets/imgs/speaker-02.svg" height=700em>
+    </div>
+
+    <div class="container">
+        <p class="row, blur">
+            Sometimes, to feel like I have company during dinner, I dispute credit card charges on speaker phone.
+        </p>
+    </div>
+
+    <a href="maxim_eight.html">next</a>
+
+</body></html>
