--- a/projects/maxims/maxim_two.html
+++ b/projects/maxims/maxim_two.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
+    <a href="maxim_one.html">Previous</a>
+    
+    <div>
     <p class="row">
-        <span id="float">Stop eating people's old French fries, <span class="pigeon">pigeon!</span>  Have some self respect! 
+        <span id="float">Stop eating people's old French fries, pigeon! Have some self respect! 
         </span>
     </p>
-    <img src="assets/imgs/pigeon.png" height="400px">
-    <p class="row">Don't you know you can <span id="fly"> fly?</span>
+    <img src="assets/imgs/pigeon.png" height="500px">
+    <p class="row">Don't you know you can <span id="fly">fly?</span>
     </p>
+    </div>
+    
+    <a href="maxim_three.html">Next</a>
 </body>
 
 </html>
