--- a/projects/maxims/maxim_eight.html
+++ b/projects/maxims/maxim_eight.html
@@ -4,13 +4,33 @@
     <title>Maxim Eight</title>
     <meta charset="UTF-8">
     <meta name="viewport" contesnt="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="assets/css/maxim_style_eight.css">
 </head>
 
 <body>
-    <p class="row"> 
-    The Black Crusaders are a secret group of powerful Black Americans. Bill Cosby and Oprah Winfrey are the chief majors, but Jesse Jackson, Colin Powell and Gordon from Sesame Street, they're members too, and they meet four times a year in the skull of the Statue of Liberty. You can read about that on the Interweb.
-    </p>
-</body>
 
-</html>
+    <a href="maxim_seven.html">Previous</a>
+
+
+    <div class="row">
+        <p class="flow"> 
+            I believe that the moon does not exist.
+            <br>
+            <br>
+            I believe that vampires are the world's greatest golfers but their curse is they never get a chance to prove it.
+            <br>
+            <br>
+            I believe that there are 31 letters in the white alphabet.
+        </p>
+
+        <div>
+            <p class="wait">...wait, what was the question?</p>
+        </div>
+    </div>
+
+    <a href="maxim_nine.html">Next</a>
+
+</body></html>
