--- a/projects/marathon/marathon2.html
+++ b/projects/marathon/marathon2.html
@@ -40,7 +40,7 @@
     <br>
     <br>
     <br>
-    <a href="marathon1.html">Back</a>
+    <a href="marathon.html">Back</a>
     <a href="marathon3.html">Next</a>
     
 
