--- a/projects/maxims/maxim_eight.html
+++ b/projects/maxims/maxim_eight.html
@@ -26,7 +26,7 @@
             I believe that there are 31 letters in the white alphabet.
         </p>
 
-        <div>
+        <div class="row">
             <p class="wait">...wait, what was the question?</p>
         </div>
     </div>
