--- a/projects/maxims/maxim_seven.html
+++ b/projects/maxims/maxim_seven.html
@@ -13,8 +13,9 @@
 <body>
 
     <a href="maxim_six.html">Previous</a>
-
-    <div>
+    
+    <div class=row></div>
+    <div class="row">
         <img src="assets/imgs/speaker-03.svg" height=700em class="over">
         <img src="assets/imgs/speaker-02.svg" height=700em>
     </div>
@@ -25,6 +26,6 @@
         </p>
     </div>
 
-    <a href="maxim_eight.html">next</a>
+    <a href="maxim_eight.html">Next</a>
 
 </body></html>
