Menu Changes and tweaks

--- a/projects/generatorpage/index.html
+++ b/projects/generatorpage/index.html
@@ -9,66 +9,59 @@
 <body>
   <script src="sketch.js"></script>
   <div>
-    <p>Set Background Color</p>
+    <h1>Set Background Color</h1>
   </div>
-  <div class="side">
+  <div class="side" id="bgCol">
     <table>
       <tbody><tr>
-        <td>R</td>
+        <td id="rBG">R</td>
       </tr>
       <tr> 
-        <td>G</td>
+        <td id="gBG">G</td>
       </tr>
       <tr> 
-        <td>B</td>
+        <td id="bBG">B</td>
       </tr>
     </tbody></table>
   </div>
   <div class="shape">
-    <p>Change Large Shape</p>
+    <h1>Change Large Shape</h1>
     <div class="side">
     <table>
       <tbody><tr>
-        <td>Radius</td>
+        <td>Size</td>
       </tr>
       <tr>
-        <td>R</td>
+        <td id="rLg">R</td>
       </tr>
       <tr> 
-        <td>G</td>
+        <td id="gLg">G</td>
       </tr>
       <tr> 
-        <td>B</td>
+        <td id="bLg">B</td>
       </tr>
     </tbody></table>
-  </div>
-    
+    </div>
   </div>
 
   <div class="shape">
-    <p>Change Small Shape</p>
+    <h1>Change Small Shape</h1>
     <div class="side">
     <table>
       <tbody><tr>
-        <td>Radius</td>
+        <td>Size</td>
       </tr>
       <tr>
-        <td>R</td>
+        <td id="rSm">R</td>
       </tr>
       <tr> 
-        <td>G</td>
+        <td id="gSm">G</td>
       </tr>
       <tr> 
-        <td>B</td>
+        <td id="bSm">B</td>
       </tr>
     </tbody></table>
   </div>
-  </div>
-  <div class="shape">
-    <br>
-    <!--     <p>Press C to randomize <br> all of the colors</p>
-      
-      <p> Double click to <br> rearrange all shapes</p> -->
   </div>
 
 
