--- a/projects/generatorpage/generatorpage.html
+++ b/projects/generatorpage/generatorpage.html
@@ -34,15 +34,12 @@
         <h1> Pattern Generator page</h1>
         <div class="desc">
             <h2>Rorschach Creator</h2>
-            <p>This generator was made as an exploration of the visual potential for the inkblot portion of the Rorschach test. The patterns engage with the element of symmetry and form, as well as color. The generator creates a randomized number of set of shapes, which are mirrored on both halves of the canvas.</p>
+            <p>This generator was made as an exploration of the visual potential for the inkblot portion of the Rorschach test. The patterns engage with the element of symmetry and form, as well as color. The generator creates a randomized number of shapes, which are mirrored on both halves of the canvas.</p>
             <br>
             <p>
                 <a href="index.html" class="main">Go to Generator</a>
             </p>
          </div>
-        <div class="desc">
-            <center><h2>Sample Images</h2></center>
-        </div>
 
         <div class="flex-container">
                 <img src="img/1.png" height="500px">
