--- a/projects/generatorpage/generatorpage.html
+++ b/projects/generatorpage/generatorpage.html
@@ -15,7 +15,7 @@
 <body>
     <!--    Navigation-->
     <div class="nav">
-    <h1 href="index.html" class="name"> Carissa Tsien</h1>
+        <h1 href="index.html" class="name"> Carissa Tsien</h1>
         <div class="links">
             <a href="../../index.html">Home</a>
 
@@ -29,7 +29,7 @@
 
     <!--    Site Content-->
 
-    
+
     <div id="header">
         <h1> Pattern Generator page</h1>
         <div class="desc">
@@ -39,12 +39,12 @@
             <p>
                 <a href="index.html" class="main">Go to Generator</a>
             </p>
-         </div>
+        </div>
 
         <div class="flex-container">
-                <img src="img/1.png" height="500px">
-                <img src="img/2.png" height="500px">
-                <img src="img/3.png" height="500px">
+            <img src="img/1.jpg" height="500px">
+            <img src="img/2.jpg" height="500px">
+            <img src="img/3.jpg" height="500px">
         </div>
     </div>
 
