--- a/projects/generatorpage/generatorpage.html
+++ b/projects/generatorpage/generatorpage.html
@@ -42,6 +42,7 @@
         </div>
 
         <div class="flex-container">
+            <img src="img/0.jpg" height="500px">
             <img src="img/1.jpg" height="500px">
             <img src="img/2.jpg" height="500px">
             <img src="img/3.jpg" height="500px">
