generator and current projects changes

--- a/current-projects.html
+++ b/current-projects.html
@@ -89,7 +89,7 @@
         </ul>
         
         <ul>
-            <a href="projects/generatorpage/generatorpage.html" class="main">Pattern Generator Page</a>
+            <a href="projects/generatorpage/index.html" class="main">Pattern Generator Webpage</a>
         </ul>
     </div>
 
